took current page height out of scrolly calculation, thus fixing scrollbar

--- a/scroll-progress-bar/spb.css
+++ b/scroll-progress-bar/spb.css
@@ -55,6 +55,10 @@ table {
 /* ****** END RESET ********* */
 /* ************************** */
 
+html {
+  height: 180vh;
+}
+
 body {
   height: 180vh;
   background-color: rgb(200,100,100);
@@ -82,7 +86,7 @@ body {
 }
 
 .inner-scroll-bar {
-  height: 50%;
+  height: 0;
   width: 100%;
   background-color: green;
 }
